# shard

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: checks.yaml
progress/: Cargo.toml
progress/src/: lib.rs
src/: args.rs  ast.rs  compiler.rs  fs.rs  lexer.rs  location.rs  logger.rs  main.rs  parser.rs  report.rs  span.rs  token.rs  util.rs  utils.rs
src/analyzer/: hir.rs  mod.rs
src/codegen/: llvm.rs  mod.rs  qbe.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
