[package]
name = "sharc"
version = "0.1.0"
edition = "2021"
description = "The compiler for the Shard Programming Language."
license = "MIT"
repository = "https://github.com/shard-org/sharc"
keywords = ["shard", "compiler", "language", "assembly"]
categories = ["compiler", "development-tools"]


[dependencies]
colored = "2.1"   # needed for cross platform
iterlist = "0.4"  # made by me so its fine

progress = { path = "progress" }


[profile.release]
lto = "fat"
panic = "abort"
opt-level = "s"
debug = false
codegen-units = 1
