[package]
name        = "sharc"
version     = "0.1.0"
edition     = "2021"
description = "Compiler for the Shard Programming Language."
license     = "0BSD"
repository  = "https://github.com/shard-org/sharc"
keywords    = ["shard", "compiler", "language", "qbe"]
categories  = ["compiler", "development-tools"]


[dependencies]
colored = "3.0"   # needed for cross platform
bitflags = "2.8"
progress = { path = "progress" }


[profile.release]
lto = "fat"
panic = "abort"
opt-level = "s"
debug = false
codegen-units = 1
